Refactoring: Simplified main() in Driver